--- a/content/coursework/labs/3.chatting-app/1.layout.md
+++ b/content/coursework/labs/3.chatting-app/1.layout.md
@@ -52,7 +52,7 @@ You see I don't mind providing you with a lot of code snippets here, because the
     :::
 
  ```html
- <input id="my-name-input" ... value="Wes Reed">
+ <input id="my-name-input" ... value="Andrew Lively">
  ```
 
 > Now the page  div should look like this
