--- a/content/syllabus/1.info.md
+++ b/content/syllabus/1.info.md
@@ -5,7 +5,7 @@ title: Course Information
 
 * **Course:** [IT3049C - Web Game Development](#)
 * **Format and credit hours:** 3 credit hours; Online.
-* **Instructor:** Wes Reed, [reedws@ucmail.uc.edu](mailto:reedws@ucmail.uc.edu)
+* **Instructor:** Andrew Lively, [livelyar@ucmail.uc.edu](mailto:livelyar@ucmail.uc.edu)
 * **Teaching Assistant** None, [@mail.uc.edu](mailto:@mail.uc.edu)
 
 :::caution note
