--- a/content/syllabus/2.need-help.md
+++ b/content/syllabus/2.need-help.md
@@ -13,18 +13,8 @@ First, when you get stuck you should search online for the answer to your proble
 
 ## Study Group 👨🏽‍💻👩🏼‍💻👨🏾‍💻👨🏻‍💻👩🏽‍💻👨🏼‍💻👩🏾‍💻👩🏻‍💻
 
-**highly recommended**
+**Highly recommended**
 Many students learn better and faster when working in a group, so I encourage collaborative learning. You can work together in a study group with 2–4 students to discuss class materials, homework assignments, and projects on a weekly basis. However, each student must submit their work individually; your work should reflect your own understanding of the materials.
-
-## Ask MS Team's `Questions ❓` Channel 🙋‍♀️🙋‍♂️
-
-- If you need technical assistance, please ask you question on *Microsoft Teams*.
-  - While I'll do my best to get to your questions as soon as I can, but I will almost always be beat by your fellow classmates.
-  - It's a great learning opportunity for you to help other students or to engage in technical discussion to find the answer together.
-  - The class TA (if assigned) will also be monitoring the chat and responding to your questions.
-  - If you're not able to come to resolution, please @me/mention me on the question thread.
-- I will try to periodically check on the questions, comment or correct any answers.
-- I highly advise, you regularly check your classmates questions and participate.
 
 ## SoIT Learning Center
 
