--- a/content/syllabus/3.policies.md
+++ b/content/syllabus/3.policies.md
@@ -25,7 +25,7 @@ title: Policies
   * Please note `IT3049C` in the email subject.
 * For any email communication with me or the TA, make sure to:
   * Send it FROM your School UC email.
-  * Send it TO my School UC email :) [reedws@ucmail.uc.edu](mailto:reedws@ucmail.uc.edu).
+  * Send it TO my School UC email :) [livelyar@ucmail.uc.edu](mailto:livelyar@ucmail.uc.edu).
 * Please review my [Service Level Agreement](sla) for more (important) info about when to expect a response.
 
 ## Course Evaluation
