--- a/content/syllabus/2.need-help.md
+++ b/content/syllabus/2.need-help.md
@@ -22,8 +22,7 @@ Many students learn better and faster when working in a group, so I encourage co
 
 ## Office Hours 👨‍🏫 👨‍💻
 
-- By appointment - please [sign up here](https://outlook.office365.com/owa/calendar/OfficeHours6@mailuc.onmicrosoft.com/bookings/).
-  - The calendar will always be up to date with our availability.
+- By appointment - please reach out to set up a time.
 - After scheduling an appointment, please make sure to open the confirmation email and add the appointment to your outlook calendar
 
     ![Screenshot showing the calendar event and the add to calendar button](/img/booking-appt.png)
