--- a/content/syllabus/1.info.md
+++ b/content/syllabus/1.info.md
@@ -6,7 +6,7 @@ title: Course Information
 * **Course:** [IT3049C - Web Game Development](#)
 * **Format and credit hours:** 3 credit hours; Online.
 * **Instructor:** Andrew Lively, [livelyar@ucmail.uc.edu](mailto:livelyar@ucmail.uc.edu)
-* **Teaching Assistant** None, [@mail.uc.edu](mailto:@mail.uc.edu)
+* **Teaching Assistant** None
 
 :::caution note
 The instructor reserves the right to update this syllabus as class needs arise. Be assured that any changes to the schedule, syllabus or policies, will communicated to you quickly and efficiently.
